BAP-7263: Review Google SSO for Oro Platform

--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,8 @@
         "components/jquery": "2.1.*",
         "components/underscore": "1.7.*",
         "components/backbone": "1.1.*",
-        "hwi/oauth-bundle": "~0.3"
+        "hwi/oauth-bundle": "~0.3",
+        "components/font-awesome": "~4.3.0"
     },
     "config": {
         "component-dir": "web/bundles/components"
