OEE-548 Update system organization ACL logic review fix

--- a/src/OroPro/Bundle/SecurityBundle/Resources/config/entity_config.yml
+++ b/src/OroPro/Bundle/SecurityBundle/Resources/config/entity_config.yml
@@ -1,8 +1,8 @@
 oro_entity_config:
-    security:
+    ownership:
         entity:
             items:
                 # This attribute is allow to show entities from organization with system access for other organization
-                ownership: # boolean
+                global_view: # boolean
                     options:
-                        global_view: false
+                        auditable: false
