--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,8 @@
         "components/underscore": "1.7.*",
         "components/backbone": "1.1.*",
         "hwi/oauth-bundle": "~0.3",
-        "components/font-awesome": "~4.3.0"
+        "components/font-awesome": "~4.3.0",
+        "piwik/device-detector": "~3.0"
     },
     "config": {
         "component-dir": "web/bundles/components"
