CRM-2881 comments design update

--- a/src/OroPro/Bundle/CommentBundle/Resources/config/requirejs.yml
+++ b/src/OroPro/Bundle/CommentBundle/Resources/config/requirejs.yml
@@ -2,5 +2,7 @@ config:
     map:
         '*':
             'orocomment/js/app/models/comment-model': 'oroprocomment/js/app/models/comment-model'
+        'oroprocomment/js/app/models/comment-model':
+            'orocomment/js/app/models/comment-model': 'orocomment/js/app/models/comment-model'
     paths:
         'oroprocomment/js/app/models/comment-model': 'bundles/oroprocomment/js/app/models/comment-model.js'
