CRM-3235: Dashboard on mobile view are not scrollable

--- a/src/OroCRMPro/Bundle/FusionChartsBundle/Resources/config/requirejs.yml
+++ b/src/OroCRMPro/Bundle/FusionChartsBundle/Resources/config/requirejs.yml
@@ -31,6 +31,7 @@ config:
         'orocrmprofusioncharts/lib/FusionCharts.HC':
             'orocrmprofusioncharts/lib/FusionCharts': 'orocrmprofusioncharts/lib/FusionCharts'
     paths:
+        'orocrmprofusioncharts/lib/FusionCharts.extend': 'bundles/orocrmprofusioncharts/lib/FusionCharts.extend.js'
         'orocrmprofusioncharts/lib/FusionCharts.HC.Charts': 'bundles/orocrmprofusioncharts/lib/FusionCharts.HC.Charts.js'
         'orocrmprofusioncharts/lib/FusionCharts.HC.Widgets': 'bundles/orocrmprofusioncharts/lib/FusionCharts.HC.Widgets.js'
         'orocrmprofusioncharts/lib/FusionCharts.HC': 'bundles/orocrmprofusioncharts/lib/FusionCharts.HC.js'
@@ -40,3 +41,16 @@ config:
 
         'orocrmprofusioncharts/js/fusion-data-handler': 'bundles/orocrmprofusioncharts/js/fusion-data-handler.js'
         'orocrmprofusioncharts/js/multiple-data-handler': 'bundles/orocrmprofusioncharts/js/multiple-data-handler.js'
+
+build:
+    paths:
+        # FusionCharts lib is excluded from the build,
+        # because it conflicts with fullcalendar and breaks scroll on mobile version.
+        # In addition this resources are already minified
+        'orocrmprofusioncharts/lib/FusionCharts.extend': 'empty:'
+        'orocrmprofusioncharts/lib/FusionCharts.HC.Charts': 'empty:'
+        'orocrmprofusioncharts/lib/FusionCharts.HC': 'empty:'
+        'orocrmprofusioncharts/lib/FusionCharts.HC.Widgets': 'empty:'
+        'orocrmprofusioncharts/lib/FusionCharts.jqueryplugin': 'empty:'
+        'orocrmprofusioncharts/lib/FusionCharts': 'empty:'
+        'orocrmprofusioncharts/lib/FusionChartsExportComponent': 'empty:'
