OEE-585: Button "Create Magento Customer" is available for Organization without Magento Channel - check access on vote

--- a/src/OroPro/Bundle/OrganizationBundle/Resources/config/services.yml
+++ b/src/OroPro/Bundle/OrganizationBundle/Resources/config/services.yml
@@ -157,4 +157,4 @@ services:
             - @oro_security.acl.annotation_provider
             - %oro_organization.organization.entity.class%
         tags:
-            - { name: security.voter }
+            - { name: security.voter, priority: -255 }
