--- a/src/OroCRMPro/Bundle/OutlookBundle/Resources/config/system_configuration.yml
+++ b/src/OroCRMPro/Bundle/OutlookBundle/Resources/config/system_configuration.yml
@@ -75,7 +75,7 @@ oro_system_configuration:
             data_type: array
         oro_crm_pro_outlook.contacts_mapping:
             data_type: array
-        oro_crm_pro_outlook.xaml_layouts:
+        oro_crm_pro_outlook.layouts:
              data_type: array
 
         oro_crm_pro_outlook.tasks_enabled:
@@ -148,5 +148,5 @@ oro_system_configuration:
                 oro_crm_pro_outlook.tasks_enabled: ~
             calendar_events:
                 oro_crm_pro_outlook.calendar_events_enabled: ~
-            xaml_layouts:
-                oro_crm_pro_outlook.xaml_layouts: ~
+            layouts:
+                oro_crm_pro_outlook.layouts: ~
